# functions

./: README.md
calculateNormals/: README.md  calculateNormals.cpp  calculateNormals.h  calculateNormalsOnGpu.cpp  calculateNormalsOnGpu.h
calculateNormals/demo_cpu/: CMakeLists.txt  main_demo_normals_cpu.cpp
calculateNormals/demo_gpu/: CMakeLists.txt  main_demo_normals_gpu.cpp
combineXYZwithTexture/: README.md  combineXyzWithTexture.cpp  combineXyzWithTexture.h
cvMatToBinaryFile/: README.md  cvMatToBinaryFile.cpp  cvMatToBinaryFile.h
cvMatToPCLPointCloud/: README.md  cvMatToPCLPointCloud.cpp  cvMatToPCLPointCloud.h
extractTargetUvBasedOnSourceXyz/: README.md  extractTargetUvBasedOnSourceXyz.cpp  extractTargetUvBasedOnSourceXyz.h
generateTexture/: README.md  generateTexture.cpp  generateTexture.h
